<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="lockout_time_entries">
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
        <item>12 hours</item>
    </string-array>
    <string-array name="lockout_time_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="text_size_entries">
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
        <item>17</item>
        <item>19</item>
        <item>21</item>
        <item>23</item>
        <item>25</item>
        <item>27</item>
        <item>29</item>
        <item>31</item>
        <item>33</item>
        <item>35</item>
    </string-array>
    <string-array name="text_size_values">
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
        <item>17</item>
        <item>19</item>
        <item>21</item>
        <item>23</item>
        <item>25</item>
        <item>27</item>
        <item>29</item>
        <item>31</item>
        <item>33</item>
        <item>35</item>
    </string-array>

    <string-array name="trivia_categories">
        <item>Any</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals and Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science and Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime and Manga</item>
        <item>Entertainment: Cartoon and Animations</item>
    </string-array>

    <string-array name="trivia_categories_values">
        <item>Any</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>

    <string-array name="trivia_style_entries">
        <item>Trivia</item>
        <item>Flashcards</item>
    </string-array>

    <string-array name="trivia_style_values">
        <item>Trivia</item>
        <item>Flashcards</item>
    </string-array>

</resources>