...
    <string name="kioskphonelock">PHONE IS LOCKED</string>
    <string name="time_left">02H:02M:02S</string>
    <string name="lock_phone">LOCK</string>
    <string name="unlock_phone">UNLOCK</string>
    <string name="phone">Phone</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="kiosk">Unlock Phone</string>
    <string name="phone_usage_limit">Phone Usage Limit (HH:MM)</string>
    <string name="lockout_time">Lockout Time (HH:MM)</string>
    <string name="lockout_time_default">1</string>
    <string name="trivia_categories">Trivia Categories</string>
    <string name="trivia_categories_default">Any</string>
...
